--- a/reports/index.html
+++ b/reports/index.html
@@ -47,7 +47,7 @@ Does the default install kernel recognize all your hardware? Yes
 Which drivers are missing? None
 
 Do you manage your configuration space under version control? Yes, in git. 
-    Our configs can be found here: https://vcs.fsf.org/?p=fai-configs.git
+    Our configs can be found here: <a href="https://vcs.fsf.org/?p=fai-configs.git">https://vcs.fsf.org/?p=fai-configs.git</a>
 
 How big is your config space (Mbytes, # of files)? 836K / 121 files
 How many files do you have in ../config/files? 29
