--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[11 Dez 2015] <b>FAI 5.0.1 is released, new images available</b>
-<li>[24 Nov 2015] <b>FAI 5.0 is released</b>
+<li>[11 Dez 2015] <b>FAI 5.0.1 is released, new images available</b> </li>
+<li>[24 Nov 2015] <b>FAI 5.0 is released</b> </li>
 <li>[22 Aug 2015] <b>
 Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
 		Conference in Heidelberg</a></b></li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
-<img alt="distributions" src="/pics/dist-logos.png" width="270px">
+<img alt="distributions" src="/pics/dist-logos.png" width="270px"/>
 </div>
 
 <h2 style="display:inline-block;width:40%">Features</h2>
