--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>FAI - Fully Automatic Installation</title>
       <meta name="Title" content="FAI - Homepage" />
       <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
@@ -63,7 +63,7 @@ Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf1
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
-<img alt="distributions" src="/pics/dist-logos.png" width="270px"/>
+<img alt="distributions" src="/pics/dist-logos.png" width="270"/>
 </div>
 
 <h2 style="display:inline-block;width:40%">Features</h2>
