use new tracker url

--- a/sources/index.html
+++ b/sources/index.html
@@ -43,7 +43,7 @@
 
 <h1>QA and Bugs</h1>
 <ul>
-<li> <a href="http://packages.qa.debian.org/fai">QA page</A> of FAI
+<li> <a href="https://tracker.debian.org/pkg/fai">QA page</A> of FAI
 <li> <a href="http://bugs.debian.org/src:fai">Bugs</a> in the Debian Bug Tracking System
 </ul>
 
