--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -56,8 +56,9 @@ clients. Also diskless clients are supported.
 How to add Debian Squeeze to your Debian Lenny FAI install server</a> (9/2011)
 -->
 
-
-<li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a> (2015)
+<li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a>,
+<a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">blog entry<a/>
+ (2015)
 
 <li> <a href="/doc/tech_fai.pdf">Practical description for FAI 4.2</a> (25 pages, 2014)
 
