--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,73 @@ Currently we have more than 290 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Bruce Merry
+<br><b>Date:</b> Tue, 16 Feb 2016 10:34:49 +0200
+<pre>
+How many hosts have you installed using fai? <b>1 so far, 20-30 in future</b>
+Which version of fai are you using? <b>5.0</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? Servers
+
+How do you boot your hosts? using FAI-CD
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+
+Do you manage your configuration space under version control? yes
+How big is your config space (Mbytes, # of files)? 464K, 74 files
+How many files do you have in ../config/files? 11
+
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> radio astronomy,  <a href="http://www.ska.ac.za">SKA South Africa</a>
+<br><b>Additional comments:</b>
+We're using Ubuntu 14.04, which FAI seems to support reasonably well,
+but I had to make a few tweaks.
+
+On the plus side, the flexibility of FAI turned out to be very useful,
+even though it was a bit of a learning curve. I was also able to
+customise things so that the entire installation is done with one
+command from my laptop through the remote access controller (iDRAC) on
+the server.
+</pre> <HR>
+
+
+<b>From:</b> Jens Schmidt,  lastn ame at iils .de
+<br><b>Date:</b> Thu, 4 Feb 2016 18:15:36 +0100
+
+<pre>
+How many hosts have you installed using fai? <b>20</b> (3 bare Iron + 9 kvm guests + 8 desktop clients)
+
+Which version of fai are you using? <b>5.0.1</b>
+Which version are you using as your install kernel? plain Debian Jessie kernel
+
+Which types of hosts are you installing with fai? Firewall, KVM Server, Samba 4 AD, Jenkins Build Server, Gerrit Server, 
+                                                  Apache Web Server, Desktops, everything! :-)
+
+How do you boot your hosts?
+   PXE, DHCP, bootmenu with:
+     Local Boot
+	FAI
+	Debian Netboot Installer
+	Windows7Sp1
+
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+
+Do you manage your configuration space under version control? yes, git
+How big is your config space (Mbytes, # of files)? 740K
+How many files do you have in ../config/files? 60
+
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> <a href="http://www.iils.de">IILS Ingenieurgesellschaft für Intelligente Lösungen und Systeme mbH</a>
+                     Mostly developement of the design compiler 43 and engineering services
+<br><b>Additional comments:</b>
+fai makes life easier
+</pre> <HR>
+
+
 <b>From:</b> Lisa Marie Maginnis,  l i s a m  = f sf = o r g
 <br><b>Date:</b> Tue, 22 Dec 2015 00:51:31 -0500
 <pre>
