--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[31 Jan 2016] <b>
+Thomas gave a talk at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a></b></li>
+<li>[27 Jan 2016] <b>FAI 5.0.2 is released</b> </li>
 <li>[11 Dez 2015] <b>FAI 5.0.1 is released, new images available</b> </li>
 <li>[24 Nov 2015] <b>FAI 5.0 is released</b> </li>
-<li>[22 Aug 2015] <b>
-Thomas gave a talk about FAI at the <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">Debian
-		Conference in Heidelberg</a></b></li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
