--- a/talks/index.html
+++ b/talks/index.html
@@ -105,7 +105,14 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 <li> A talk a Chaos Computer Club Cologne (C4) (2015)
 <li> A <a href="https://summit.debconf.org/debconf15/meeting/338/fai/">talk</a> at the Debian Conference (DebConf 15) in Heidelberg <a href="../doc/338-FAI--The-Universal-Installation-Tool.pdf">slides</a> and
 <a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/FAI_the_universal_deployment_tool.webm">video</a>
+
+
+<li> Lighning talk with a demo of FAI 5.0 at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a>,
+<a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>
+
 </ul>
+
+
 
 <!--
 <a href=http://www.linuxtag.org>LinuxTag 2004</a> 23-26. june in Karlsruhe or
@@ -114,19 +121,17 @@ in Ludwigsburg/Germany, Region of Stuttgart, 21st to 29th of August
 and at
 <a href=www.linux-kongress.org>Linux Kongress 2004</a>
 <li>
-
 <ul>
 <li>
 <a href=http://www.usenix.org/events/lisa04/>LISA 2004 in Atlanta</a>
 </ul>
-
 -->
 
 </ul>
 <p>
 
 <ADDRESS>
-Sun, 22 Nov 2015 16:30:39 +0100
+Mon, 01 Feb 2016 13:18:12 +0100
 </ADDRESS>
 
  
