--- a/reports/index.html
+++ b/reports/index.html
@@ -28,9 +28,39 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 
 <h1>User reports</h1>
 
-Currently we have more than 290 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
+Currently we have more than 300 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
 <p>
 <hr/>
+
+<b>From:</b> anonymous
+<br><b>Date:</b> Date: Mon, 22 Feb 2016 11:16:23 +0100
+<pre>
+How many hosts have you installed using fai? <b>Only 4</b>  (but it could increase significantly
+     if I decide to switch  all my servers and/or my clusters from RocksCluster to FAI).
+
+Which version of fai are you using? <b>3.3</b>
+Which version are you using as your install kernel? Ubuntu 14.04
+
+Which types of hosts are you installing with fai? Performance workstations (hundreds of RAM Gb / 64 cores...).
+
+How do you boot your hosts? PXE
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? None
+
+Do you manage your configuration space under version control? Yes (git)
+
+How big is your config space (Mbytes, # of files)? 508K, #85
+How many files do you have in ../config/files? #11
+
+What types of scripts are you using for local customization? Just a shell hook for this moment
+
+<b>What is the business of your company/organisation?</b> Research in the fields of species evolution, environment, ecology, France
+<br><b>Additional comments:</b>
+I am using FAI with SaltStack to install new machines. We have some customers who
+book some performing machines and we reinstall these ones with FAI between each
+schedule. We did that with VM before but had some performance issues.
+</pre> <HR>
+
 
 <b>From:</b> Bruce Merry
 <br><b>Date:</b> Tue, 16 Feb 2016 10:34:49 +0200
@@ -87,7 +117,7 @@ Does the default install kernel recognize all your hardware? yes
 Which drivers are missing? none
 
 Do you manage your configuration space under version control? yes, git
-How big is your config space (Mbytes, # of files)? 740K
+How big is your config space (Mbytes, # of files)? 740K, #184
 How many files do you have in ../config/files? 60
 
 What types of scripts are you using for local customization? shell
