upgrade link to jessie

--- a/download/index.html
+++ b/download/index.html
@@ -56,7 +56,7 @@ or
 
 <p>
 
-<li> FAI packages from the official <A href=" http://fai-project.org/download/wheezy/">project repository</A> or
+<li> FAI packages from the official <A href=" http://fai-project.org/download/jessie/">project repository</A> or
 from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
