--- a/reports/index.html
+++ b/reports/index.html
@@ -48,10 +48,10 @@ How do you boot your hosts?
             using FAI-CD: N
 	  from USB stick: N
 
-Does the default install kernel recognize all your hardware? Y
+Does the default install kernel recognize all your hardware? Yes
 Which drivers are missing? N/A
 
-Do you manage your configuration space under version control? Y
+Do you manage your configuration space under version control? Yes, git
 
 How big is your config space (Mbytes, # of files)? 668K, #107
 How many files do you have in ../config/files? 11
