add report, some cleanup

--- a/reports/index.html
+++ b/reports/index.html
@@ -28,20 +28,44 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 
 <h1>User reports</h1>
 
-Currently we have more than 300 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
+Currently we have more than 300 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>.
 <p>
 <hr/>
+
+<b>From:</b> anonymous at kaneo-gmbh.de
+<br><b>Date:</b>  Tue, 28 Jun 2016 10:19:38 +0200
+
+<pre>
+How many hosts have you installed using fai? About <b>50</b> servers and 15 desktops/notebooks
+Which types of hosts are you installing with fai? desktops, notebooks, all server nodes
+
+Which version of fai are you using? <b>5.0.2</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+How do you boot your hosts? Over PXE
+Does the default install kernel recognize all your hardware? Yes it does
+
+Do you manage your configuration space under version control? yes, using SVN
+How big is your config space (Mbytes, # of files)? around 10-15
+What types of scripts are you using for local customization? shell and cfengine
+
+<b>What is the business of your company/organisation?</b> it service for medium sized companies, <a href=" https://www.kaneo-gmbh.de/">kaneo GmbH - green IT solutions</a>
+<br><b>Additional comments:</b>
+Thanks for all the time we saved with this project! :)
+Great project, thank you!
+We have a default setup for all our servers, so there are only a few config files.
+</pre> <HR>
+
 
 <b>From:</b> Andrew Bezella, aLASTNAME =at= archive.org
 <br><b>Date:</b> Tue, 26 Apr 2016 13:52:21 -0700
 <pre>
 How many hosts have you installed using fai? <b>1197</b> bar-metal
 hosts. In addition, we have about 800 ganeti-managed kvm instances
+Which types of hosts are you installing with fai? bare-metal servers and virtual machines
 
 Which version of fai are you using? 	currently migrating from <b>3.4.8ubuntu5</b> to 5.0.3
 Which version are you using as your install kernel? linux-image-4.4.6-fai-amd64
-
-Which types of hosts are you installing with fai? bare-metal servers and virtual machines
 
 How do you boot your hosts?
  via network (PXE, DHCP): Y
@@ -81,11 +105,10 @@ ganeti-managed kvms.  nice to have a single installer for both.
 <pre>
 How many hosts have you installed using fai? <b>Only 4</b>  (but it could increase significantly
      if I decide to switch  all my servers and/or my clusters from RocksCluster to FAI).
+Which types of hosts are you installing with fai? Performance workstations (hundreds of RAM Gb / 64 cores...).
 
 Which version of fai are you using? <b>5.0</b>
 Which version are you using as your install kernel? Ubuntu 14.04
-
-Which types of hosts are you installing with fai? Performance workstations (hundreds of RAM Gb / 64 cores...).
 
 How do you boot your hosts? PXE
 Does the default install kernel recognize all your hardware? Yes
@@ -110,10 +133,10 @@ schedule. We did that with VM before but had some performance issues.
 <br><b>Date:</b> Tue, 16 Feb 2016 10:34:49 +0200
 <pre>
 How many hosts have you installed using fai? <b>1 so far, 20-30 in future</b>
+Which types of hosts are you installing with fai? Servers
+
 Which version of fai are you using? <b>5.0</b>
 Which version are you using as your install kernel? plain Debian kernel
-
-Which types of hosts are you installing with fai? Servers
 
 How do you boot your hosts? using FAI-CD
 Does the default install kernel recognize all your hardware? yes
@@ -143,12 +166,11 @@ the server.
 
 <pre>
 How many hosts have you installed using fai? <b>20</b> (3 bare Iron + 9 kvm guests + 8 desktop clients)
+Which types of hosts are you installing with fai? Firewall, KVM Server, Samba 4 AD, Jenkins Build Server, Gerrit Server,
+                                                  Apache Web Server, Desktops, everything! :-)
 
 Which version of fai are you using? <b>5.0.1</b>
 Which version are you using as your install kernel? plain Debian Jessie kernel
-
-Which types of hosts are you installing with fai? Firewall, KVM Server, Samba 4 AD, Jenkins Build Server, Gerrit Server, 
-                                                  Apache Web Server, Desktops, everything! :-)
 
 How do you boot your hosts?
    PXE, DHCP, bootmenu with:
@@ -177,11 +199,10 @@ fai makes life easier
 <br><b>Date:</b> Tue, 22 Dec 2015 00:51:31 -0500
 <pre>
 How many hosts have you installed using fai? <b>50+</b>
-Which version of fai are you using? <b>3.4</b>
-Which version are you using as your install kernel? 4.2
-
 Which types of hosts are you installing with fai? Everything: Workstations, laptops,
      as well as physical and virtual servers
+Which version of fai are you using? <b>3.4</b>
+Which version are you using as your install kernel? 4.2
 
 How do you boot your hosts? PXE, USB Stick, and FAI-CD (for some VMs)
 Does the default install kernel recognize all your hardware? Yes
@@ -211,9 +232,8 @@ manual builds.
 
 <pre>
 How many hosts have you installed using fai? <b>150+</b>
-Which version of fai are you using? <b>5.0</b>
-
 Which types of hosts are you installing with fai? firewalls, cluster nodes, web server, mail server, monitoring server
+Which version of fai are you using? <b>5.0</b>
 
 Which version are you using as your install kernel? plain Debian kernel
 How do you boot your hosts? via network (PXE, DHCP)
@@ -237,9 +257,8 @@ Our PXE menu:
 <br><b>Date:</b>  Thu, 26 Nov 2015 21:36:19 +0530
 <pre>
 How many hosts have you installed using fai? <b>5 hosts and more than 40 VMs</b>
-Which version of fai are you using? <b>4.2</b>
-
 Which types of hosts are you installing with fai? Proxmox on top of Debian for Cloud Provisioning, Web Sever
+Which version of fai are you using? <b>4.2</b>
 
 Which version are you using as your install kernel? plain Debian kernel (3.16) from Debian 7
 How do you boot your hosts? Network PXE
@@ -263,13 +282,12 @@ I liked FAI project mainly because of support by IRC or email.​ Which is reall
 How many hosts have you installed using fai? <b>Hundreds of them,</b> literally. Be it on virtual machines (VirtualBox, Proxmox) or real hardware.
 
 Which version of fai are you using? Currently we're using <b>FAI 4.3.3</b> but we've been using it since 3.x
+Which types of hosts are you installing with fai? Desktops, virtual machines and appliances.
 
 Which version are you using as your install kernel?
   Currently Ubuntu 14.04 (using 3.19 kernel from Vivid), but recently
   Debian 8 and Debian 7 (in both cases, using kernel from backports to
   support Docker on the final image).
-
-Which types of hosts are you installing with fai? Desktops, virtual machines and appliances.
 
 How do you boot your hosts? FAI-CD for production, PXE for testing.
 Does the default install kernel recognize all your hardware? Yes.
@@ -303,7 +321,7 @@ Which types of hosts are you installing with fai?
 How do you boot your hosts?
    via network (PXE, DHCP): not yet (not in control of DHCP server)
    using FAI-CD: to create DVDs and bootable USB pendrive
-   from USB stick: mostly used, dd-ing from fai-cd.iso 
+   from USB stick: mostly used, dd-ing from fai-cd.iso
 
 Does the default install kernel recognize all your hardware? Mostly.
      I didn't try too much yet. Have tons of old hardware here.
@@ -345,10 +363,9 @@ Kerberos (todo), Aufs (todo) and so on.
 <br><b>Date:</b> Sat, 22 Aug 2015 17:05:47 +0200
 <pre>
 How many hosts have you installed using fai? <b>2 at the moment.</b> It varies depending on the number of employees and students.
+Which types of hosts are you installing with fai? Desktops
 Which version of fai are you using? <b>4.3.1</b>
 Which version are you using as your install kernel? Plain Debian kernel
-
-Which types of hosts are you installing with fai? Desktops
 
 How do you boot your hosts? Via network (BIOS and UEFI PXE, DHCP)
 Does the default install kernel recognize all your hardware? Yes
