add ubuntu link

--- a/download/index.html
+++ b/download/index.html
@@ -65,8 +65,16 @@ from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 
 <h1>Packages for Ubuntu</h1>
 
+Up-to-date official packages:
+<p>
+<div class="featurebox"><h3>
+<pre>
+deb http://archive.ubuntu.com/ubuntu/ xenial universe
+</pre>
+</h3></div>
+
 <a href="https://launchpad.net/~fai/+archive/ppa">PPA</a> containing
-FAI 5.0 and older versions.
+FAI 5.0 and older versions:
 
 <!--
  or the
