new release, new iso images

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -32,23 +32,23 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.0.1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (943 MB) </span>
+<a href="faicd64-large_5.1.2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (953 MB) </span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
 The default image. Includes all packages for XFCE and GNOME but only the basefiles
-for CentOS 7 and Ubuntu 14.04
+for CentOS 7 and Ubuntu 16.04
 <p>
 <p> &nbsp;
 <p>
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.0.1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (567 MB)</span>
+<a href="faicd64-small_5.1.2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (585 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -61,14 +61,14 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.0.1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (922 MB)</span>
+<a href="faicd64-ubuntu-only_5.1.2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.1 GB)</span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
-This image only installs Ubuntu 14.04 LTS. All packages are included. 
+This image only installs Ubuntu 16.04 LTS. All packages are included.
 <p>
 <p> &nbsp;
 <p>
@@ -87,7 +87,7 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All boot images use FAI 5.0, kernel 3.16, amd64 architecture,
+All boot images use FAI 5.1.2, kernel 3.16, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <HR>
 <p>
