--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ needs, without any interaction necessary.
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.0.1.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (940 MB)</span>
+<a href="/fai-cd/faicd64-large_5.1.2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (953 MB)</span>
 </a>
 </span>
 </p>
@@ -55,11 +55,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
+<li>[30 Jun 2016] <b>FAI 5.1.2 is released, new ISO images created</b> </li>
 <li>[31 Jan 2016] <b>
 Thomas gave a talk at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a></b></li>
-<li>[27 Jan 2016] <b>FAI 5.0.2 is released</b> </li>
-<li>[11 Dez 2015] <b>FAI 5.0.1 is released, new images available</b> </li>
-<li>[24 Nov 2015] <b>FAI 5.0 is released</b> </li>
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
