--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -87,9 +87,23 @@ Boot only image which autodiscovers the FAI server.
 <br>
 
 <p style="text-align: center;">
-All boot images use FAI 5.1.2, kernel 3.16, amd64 architecture,
+All boot images use Debian jessie, FAI 5.1.2, kernel 3.16, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's
 <HR>
+<p>
+<br>
+
+<span class="downloadbox-border" >
+<a href="stretch-faicd64-small_5.1.2.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small (stretch) &nbsp; (585 MB)</span>
+</a>
+</span>
+&nbsp;
+&nbsp;
+&nbsp;
+This is the FAI small ISO using Debian stretch.
+<p>
+<p> &nbsp;
 <p>
 
 <h3>FAI on a USB stick</h3>
