--- a/talks/index.html
+++ b/talks/index.html
@@ -108,8 +108,7 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 
 
 <li> Lighning talk with a demo of FAI 5.0 at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a>,
-<a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>
-
+<a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>, <a href="/videos/fai-fosdem-2016.mp4">Video</a>
 </ul>
 
 
