add talks/videos submenu

--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,7 @@
 		<li><a href="/fai-guide/">FAI Guide</a></li>
 		<li><a href="/doc/man/" title="man pages">Manual pages</a></li>
 		<li><a href="/otherdocs/">Other documentation</a></li>
+		<li><a href="/talks/">Talk slides and videos</a></li>
 	      </ul>
 	  </li>
 
