--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -46,7 +46,7 @@ contact before you start working.
 <li> --- TODO ---
 <li> relax and recover
 <li> --- TODO's for the next versions ---
-<li>  new command for building cloud images with FAI
+<li>  new command for building cloud images with FAI (first version available)
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -58,7 +58,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Sun, 22 Nov 2015 23:49:35 +0100
+Tue, 05 Jul 2016 10:24:29 +0200
 </ADDRESS>
 
       </div>
