--- a/reports/index.html
+++ b/reports/index.html
@@ -32,6 +32,30 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Guglielmi Matteo, lastname.firstname @ epfl.ch
+<br><b>Date:</b> Mon, 5 Sep 2016 16:56:05 +0000
+<pre>
+How many hosts have you installed using fai? about <b>300</b>
+Which version of fai are you using? <b>3.4.7 and 5.1.2</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? cluster nodes
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+Do you manage your configuration space under version control? no
+
+How big is your config space (Mbytes, # of files)? 1.3 GB, #1315
+How many files do you have in ../config/files? 1092
+What types of scripts are you using for local customization? shell, perl
+
+<b>What is the business of your company/organisation?</b> University, <a href="http://www.epfl.ch/">Swiss Federal Institute of Technology Lausanne (EPFL)</a>
+<br><b>Additional comments:</b>
+Additional scripts which extend FAI <a href="https://www.matteoguglielmi.net/ufbi/">Unattended First Boot Install</a>
+</pre> <HR>
+
+
 <b>From:</b> anonymous at kaneo-gmbh.de
 <br><b>Date:</b>  Tue, 28 Jun 2016 10:19:38 +0200
 
