--- a/reports/index.html
+++ b/reports/index.html
@@ -53,6 +53,10 @@ What types of scripts are you using for local customization? shell, perl
 <b>What is the business of your company/organisation?</b> University, <a href="http://www.epfl.ch/">Swiss Federal Institute of Technology Lausanne (EPFL)</a>
 <br><b>Additional comments:</b>
 Additional scripts which extend FAI <a href="https://www.matteoguglielmi.net/ufbi/">Unattended First Boot Install</a>
+
+Pictures of the SuperB Cluster Confederation
+
+<a href="pictures/epfl/superB-002.jpg"><img alt="superB" src="pictures/epfl/superB-002.jpg" width="20%" border="0" ></a> <a href="pictures/epfl/superB-003.jpg"><img alt="superB" src="pictures/epfl/superB-003.jpg" width="20%" border="0" ></a> <a href="pictures/epfl/superB-004.jpg"><img alt="superB" src="pictures/epfl/superB-004.jpg" width="20%" border="0" ></a> <a href="pictures/epfl/superB-005.jpg"><img alt="superB" src="pictures/epfl/superB-005.jpg" width="20%" border="0" ></a> <a href="pictures/epfl/superB-006.jpg"><img alt="superB" src="pictures/epfl/superB-006.jpg" width="20%" border="0" ></a>
 </pre> <HR>
 
 
