add link to live demos

--- a/talks/index.html
+++ b/talks/index.html
@@ -109,9 +109,12 @@ linux.conf.au Systems Administration Miniconf</a> 2015
 
 <li> Lighning talk with a demo of FAI 5.0 at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a>,
 <a href="https://fosdem.org/2016/schedule/event/fai/attachments/slides/1106/export/events/attachments/fai/slides/1106/fai_slides_fosdem_2016.pdf">Slides</a>, <a href="/videos/fai-fosdem-2016.mp4">Video</a>
+
+<li> <a href="https://debconf16.debconf.org/talks/3/">Thomas gave a
+live demo of FAI 5.0 </a> at DebConf 16 in Capetown.
+<a href="https://debconf16.debconf.org/talks/104/">Another live demo</a>
+
 </ul>
-
-
 
 <!--
 <a href=http://www.linuxtag.org>LinuxTag 2004</a> 23-26. june in Karlsruhe or
