--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -39,6 +39,7 @@ contact before you start working.
 <h1>Topics for FAI 5.X</h1>
 <ul>
 <li> --- DONE ---
+<li> new command for building cloud images with FAI (done)
 <li> btrfs support for setup-storage
 <li> replace live-boot with dracut in fai-cd
 <li> support for cloning machines with file system images
@@ -46,7 +47,6 @@ contact before you start working.
 <li> --- TODO ---
 <li> relax and recover
 <li> --- TODO's for the next versions ---
-<li>  new command for building cloud images with FAI (first version available)
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> fai-monitor-gui: new option, remove host if everything went fine
@@ -58,7 +58,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-Tue, 05 Jul 2016 10:24:29 +0200
+Wed, 14 Sep 2016 13:09:53 +0200
 </ADDRESS>
 
       </div>
