--- a/features/index.html
+++ b/features/index.html
@@ -37,20 +37,21 @@
 <li> Easy creation of customized Linux installation media like CD, DVD or USB stick
 <li> Autodiscover of the FAI install server when doing a network installation
 <li> Different hardware and different configuration requirements are easy to
-establish using FAI. You do not need to repeat information that is shared
+establish using FAI. <br>You do not need to repeat information that is shared
 among several machines.
 <li> Using the FAI class concept, you can group a bunch of similar machines.
 <li> Installation targets: desktops, servers, notebooks, Beowulf cluster, rendering or web server farm, Linux laboratory or classroom.
-<li> Linux rollout, mass installation and automated server provisioning are additional topics of FAI. 
+<li> Linux rollout, mass installation and automated server provisioning are additional topics of FAI.
 <li> FAI is lightweight. No special daemons are running, no database setup
-is needed. It's architecture independent, since it consists
+is needed.<br>It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
-<li> Besides initial installations, it is used for daily maintenance,
-and can set up chroot environments.
+<li> Besides initial installations, it is also used for daily maintenance.
+<li> Creating customized chroot environments
+<li> Building your own disk image for cloud instances
 <li> Cloning machines using disk images is supported
 <li> Also bare-metal provisioning and deploying virtual machines is supported
 <li> Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or
-Jumpstart for SUN Solaris, FAI is much more flexible. You can tune every
+Jumpstart for SUN Solaris, FAI is much more flexible.<br>You can tune every
 small part of your configuration to your local needs using hooks.
 <li> More technical information in the <a href=/poster>flyer and poster</a>
 </ul>
@@ -70,11 +71,10 @@ small part of your configuration to your local needs using hooks.
 </ul>
 
 <h1>FAI History</h1>
-FAI is rock-solid. It's now more than 15 years old. FAI was started in 1999 at
+FAI is rock-solid. It's now more than 16 years old. FAI was started in 1999 at
 the University of Cologne, when
 <a href="http://www.informatik.uni-koeln.de/~lange">Thomas</a> had to
-organize an installation of a Linux cluster with one server and 16
-clients. Today, FAI is regularly used in <a href="/reports/">varying environments</a>,
+organize an installation of a Linux cluster. Today, FAI is regularly used in <a href="/reports/">varying environments</a>,
 ranging from a dozen machines up to several thousands machines.
 <p>
       </div>
