--- a/reports/index.html
+++ b/reports/index.html
@@ -77,7 +77,7 @@ Do you manage your configuration space under version control? yes, using SVN
 How big is your config space (Mbytes, # of files)? around 10-15
 What types of scripts are you using for local customization? shell and cfengine
 
-<b>What is the business of your company/organisation?</b> it service for medium sized companies, <a href=" https://www.kaneo-gmbh.de/">kaneo GmbH - green IT solutions</a>
+<b>What is the business of your company/organisation?</b> IT service for medium sized companies, <a href=" https://www.kaneo-gmbh.de/">kaneo GmbH - green IT solutions</a>
 <br><b>Additional comments:</b>
 Thanks for all the time we saved with this project! :)
 Great project, thank you!
@@ -88,7 +88,7 @@ We have a default setup for all our servers, so there are only a few config file
 <b>From:</b> Andrew Bezella, aLASTNAME =at= archive.org
 <br><b>Date:</b> Tue, 26 Apr 2016 13:52:21 -0700
 <pre>
-How many hosts have you installed using fai? <b>1197</b> bar-metal
+How many hosts have you installed using fai? <b>1197</b> bare-metal
 hosts. In addition, we have about 800 ganeti-managed kvm instances
 Which types of hosts are you installing with fai? bare-metal servers and virtual machines
 
