--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 
 <ul>
 
-<li>[1 Jul 2016] <b>FAI 5.1.2 is released, new ISO images created</b> </li>
+<li>[14 Oct 2016] <b>FAI 5.2 is released, FAI is going to the cloud</b> </li>
 <li>[31 Jan 2016] <b>
 Thomas gave a talk at <a href="https://fosdem.org/2016/schedule/event/fai/">FOSDEM 2016</a></b></li>
 </ul>
