--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -38,14 +38,14 @@ contact before you start working.
 <br>
 <h1>Topics for FAI 5.X</h1>
 <ul>
+<li> --- TODO ---
+<li> relax and recover from testing and release process!
 <li> --- DONE ---
-<li> new command for building cloud images with FAI (done)
-<li> btrfs support for setup-storage
+<li> new command for building cloud images with FAI
+<li> btrfs and NVMe support for setup-storage
 <li> replace live-boot with dracut in fai-cd
 <li> support for cloning machines with file system images
-<li> update FAI guide
-<li> --- TODO ---
-<li> relax and recover
+<li> major update of FAI guide
 <li> --- TODO's for the next versions ---
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
